2005-01-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXfcntl.c: make attrNames static

2004-12-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/cmdtrace.test: updated for minor whitespace changes in Tcl
	8.4 results.  Will fail on 8.3, but that's not a concern.

2004-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: cygpath a few required buildhelp vars
	* configure, configure.in: refactor --with-help check to add 'col'
	prog check and defer them until TclX help is requested.
	* library/buildhelp.tcl (buildhelp): convert system call to exec
	to allow it to work on Windows

2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tools/tclmanpages: note resource.n last appears and lset.n
	first appears in 8.4 docs.

2004-11-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXfilescan.c (TclX_ScanfileObjCmd): watch for scanfile
	closing the open channel. [Bug 1045190] (hellstroem)

	* configure.in, configure: add check for NO_UNION_WAIT for
	Solaris, HP and related systems

2004-11-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tclx.tcl: Reintroduce the addition of the 'help' command
	* library/help.tcl: as tclx::help* (they can be namespace imported).
	* configure:        Adjust the configure to allow --with-help, which
	* configure.in:     is required to build the TclX help files.  This
	* Makefile.in:      still needs work on how users would build and
	install the help depending on whether it was a CVS or general
	source distribution.

	* library/edprocs.tcl (edprocs): harden tmpfile security access

	* Makefile.in: remove TCL_DEFS dependency
	* configure.in: add TEA_TIME_HANDLER checks to no longer rely on
	TCL_DEFS (not good for 8.5).

	* generic/tclXprofile.c (ProfStrCommandEval): CONST84-ify it

	* unix/tclXunixSock.c (BindFileHandles): remove impotent channel
	code on channel2.

	* doc/TclX.n: minor typo fixes

	* generic/tclExtdInt.h: compat defines to support building against
	Tcl 8.5a2+. [Bug 1066799] (dgp)
